# APIBridge

./: pyproject.toml
gcp/: agent.py  server.py
tools_generator/: __init__.py  agent.py
tools_generator/generator/: agent_generator.py
tools_generator/specifications/: NatWest.json
